# VirtualAssistant

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
core/: __init__.py
core/command_line/: __init__.py
core/command_line/parser/: command_line_parser.py  test_command_line_parser.py
core/file_system/: __init__.py  file_system.py  test_file_system.py
core/plugin/: __init__.py  plugin_core.py  plugin_engine.py  plugin_initializer.py  plugin_registry.py
models/: __init__.py
models/command_line/: __init__.py  command_line_parameters.py
models/plugin/: __init__.py  plugin_dependency.py  plugin_device.py  plugin_metadata.py  plugin_runtime.py
plugins/interface/speech-interface-plugin/: speech_interface_plugin.py
plugins/interface/text-interface-plugin/: plugin.yaml  text_interface_plugin.py
plugins/speech-interface-plugin/: plugin.yaml
plugins/text-interface-plugin/: plugin.yaml
settings/: configuration.yaml  configuration.yml
src/adapter/: __init__.py  input_plugin_core.py  input_plugin_core_interface.py  output_plugin_core.py  output_plugin_core_interface.py
src/adapter/command_line/: __init__.py
src/app/banter/: banter.py  test_banter.py
src/app/bot/: bot.py
src/application/: __init__.py
src/application/plugin/: __init__.py  plugin_manager.py
src/components/greeting/: greeting.py
src/config/: assistant.json
src/domain/: __init__.py
src/domain/plugin/: __init__.py  plugin.py  plugin_core_interface.py  plugin_core_loader_interface.py  plugin_core_validator_interface.py  (+11 more)
src/infrastructure/: __init__.py
(+108 files in other folders)
