[project]
name = "virtual-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Jesse Sandvik",email = "sandvikjesse@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "packaging (>=24.2,<25.0)"
]

[tool.poetry]
packages = [{include = "virtual_assistant", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
